@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-11T16:30:59Z",
+  "timestamp" : "2022-08-12T08:28:04Z",
   "count_outdated" : 725,
   "uniques_outdated" : 378,
-  "count" : 751,
+  "count" : 750,
   "uniques" : 392,
   "clones" : [
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
